[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/thrishaStuff/Audio/AristocratTown/Kevin MacLeodï¼š Trio for Piano Violin and Viola.wav" type="AudioStream" id=1]
[ext_resource path="res://Scenes/thrishaStuff/images/cheerleader.png" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/Aristocrats.gd" type="Script" id=4]
[ext_resource path="res://Scenes/leoStuff/HUD/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/AristocratTown.gd" type="Script" id=6]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/Thief.gd" type="Script" id=7]
[ext_resource path="res://Scenes/mimistuff/alistair_animations/character.tscn" type="PackedScene" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 162.077

[sub_resource type="CircleShape2D" id=3]
radius = 162.077

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 546.5 )

[node name="AristocratTown" type="Node2D"]
script = ExtResource( 6 )

[node name="Aristocrats" type="Area2D" parent="."]
position = Vector2( 644, 831 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aristocrats"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Aristocrats"]
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 2 )

[node name="QuestionMark" type="Sprite" parent="Aristocrats"]
position = Vector2( 0, -135 )
texture = ExtResource( 3 )

[node name="Thief" type="Area2D" parent="."]
position = Vector2( 644, 831 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Thief"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Thief"]
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 2 )

[node name="QuestionMark" type="Sprite" parent="Thief"]
position = Vector2( 0, -135 )
texture = ExtResource( 3 )

[node name="player" parent="." instance=ExtResource( 8 )]
pause_mode = 2
position = Vector2( 1056, 715 )
inOverworld = false

[node name="HUD" parent="player" instance=ExtResource( 5 )]
position = Vector2( -126, -121 )
limit_left = 0
limit_top = 0
limit_right = 2225
limit_bottom = 0

[node name="rightBoundary" type="StaticBody2D" parent="."]
position = Vector2( 1944, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightBoundary"]
position = Vector2( -4, 532.5 )
shape = SubResource( 2 )

[node name="leftBoundary" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftBoundary"]
position = Vector2( -4, 532.5 )
shape = SubResource( 2 )

[node name="AristocratTownAudio" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
position = Vector2( 980, 566 )
stream = ExtResource( 1 )

[connection signal="body_entered" from="Aristocrats" to="Aristocrats" method="_on_Cheerleader_body_entered"]
[connection signal="body_exited" from="Aristocrats" to="Aristocrats" method="_on_Cheerleader_body_exited"]
[connection signal="body_entered" from="Thief" to="." method="_on_Thief_body_entered"]
[connection signal="body_entered" from="Thief" to="Thief" method="_on_Thief_body_entered"]
[connection signal="body_exited" from="Thief" to="." method="_on_Thief_body_exited"]
[connection signal="body_exited" from="Thief" to="Thief" method="_on_Thief_body_exited"]
